# test-poetry-dynamic-version

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
hello_world/: __init__.py  _version.py  another_submodule.py
tests/: test_hello_world.py  test_version.py
