[tool.poetry]
name = "hello-world-package"
version = "0.0.0"  # Placeholder version -- real version is set by git tags
description = "A Hello World package for cloud builds and git hooks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "hello_world"}]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = """
    {%- if base == '0.0.0' -%}
        {{ '0.0.0+placeholder' }}
    {%- elif distance == 0 -%}
        {{ base }}
    {%- else -%}
        {{ base }}+{{ distance }}
    {%- endif -%}
"""
pattern = '(?P<base>\d+\.\d+\.\d+)'

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py"]
patterns = [
    { value = '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''', mode = "str" },
    { value = '''(^__version_tuple__\s*(?::.*?)?=\s*\()[^)]*(\))''', mode = "tuple" },
]

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
